--- a/index.html
+++ b/index.html
@@ -119,6 +119,21 @@
   /* Footer personal line */
   .from-line{margin-top:18px;text-align:center;color:#f3e6cf;font-weight:700;font-size:15px;letter-spacing:0.3px}
 
+  /* New link area */
+  .more-link{
+    text-align:center; 
+    margin:12px 0;
+  }
+  .more-link a{
+    color: var(--gold); 
+    font-weight:700; 
+    text-decoration:none; 
+    cursor:pointer;
+  }
+  .more-link a:hover{
+    text-decoration:underline;
+  }
+
   /* Full-screen layers (canvas) */
   canvas{position:fixed;inset:0;pointer-events:none;z-index:20}
 
@@ -165,6 +180,11 @@
         <button id="playBtn" class="control-btn" aria-pressed="false">Play Music ▶</button>
         <button id="burstBtn" class="control-btn secondary">Burst Confetti ✨</button>
       </div>
+    </div>
+
+    <!-- New link added here -->
+    <div class="more-link">
+      <a href="path.html" tabindex="0">More Greetings & Celebrations 🎉</a>
     </div>
 
     <div class="from-line"> created by Raushan Mishra   ❤️</div>
